minor styling of audio tag

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,12 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="player">
+<!-- <div>
+  <button onclick="document.getElementById('player').play()">Play</button>
+  <button onclick="document.getElementById('player').pause()">Pause</button>
+  <button onclick="document.getElementById('player').volume += 0.1">Vol+ </button>
+  <button onclick="document.getElementById('player').volume -= 0.1">Vol- </button>
+</div> -->
 
     </div>
   </body>
