playlist song change working

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-    <!--
+<link href="https://fonts.googleapis.com/css?family=Frijole|VT323" rel="stylesheet">    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -23,7 +22,11 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+
+    <div id="root">
+      <div id='pageContainer'>
+    </div>
+  
 <!-- <div>
   <button onclick="document.getElementById('player').play()">Play</button>
   <button onclick="document.getElementById('player').pause()">Pause</button>
